# iemm

./: .gitignore  LICENSE  MANIFEST.in  README.md  easy_clustering.ipynb  gen_figures_synth_tests.ipynb  iemm_notebook.ipynb  main.ipynb  pyproject.toml  setup.py  xedt_clustering_synth.ipynb
data/: easy_synth_data.csv  gen_data.ipynb  synth_data.csv
experiments/: iemm_notebook.ipynb  illustrative_medical_example.ipynb  main.ipynb  very_simple_example.ipynb
experiments/data/: gen_data.ipynb  three_clusters2D_synth.csv
experiments/figs/: Credal_Bird-2_scores.tex  Credal_Dog-2_scores.tex  Credal_Dog-4_scores.tex  diabetes_scores.tex  easy_scores.tex  full_scores.tex  iris_scores.tex  quasi-bayesian_scores.tex  rough_scores.tex  wine_scores.tex
experiments/figs/Credal_Dog-4/: Credal_Dog-4_paths.tex  diabetes_paths.tex
experiments/figs/datasets_evclust/: diabetes_paths.tex  iris_paths.tex  wine_paths.tex
experiments/figs/three_clusters2D_synth/: full_paths.tex  quasi-bayesian_paths.tex  rough_paths.tex
experiments/figs/two_clusters2D_synth/: easy_paths.tex
figs/: Credal_Bird-2_scores.tex  Credal_Dog-4_scores.tex  all_comparisons_df.tex  all_scores.tex  all_scores_df.tex  quasi-bayesian_scores.tex
figs/Credal_Bird-2/: Credal_Bird-2_paths.tex
figs/Credal_Dog-2/: Credal_Dog-2_paths.tex
figs/easy/xedt_outs_/: paths_table.tex
figs/three_clusters2D_synth/: easy_scores.tex  full_paths.tex  quasi-bayesian_paths.tex  rough_scores.tex  simple_scores.tex
iemm/: __init__.py  core.py  utils.py
lib/: ibelief.py  iemm.py  utils.py  xedt.py
(+1 files in other folders)
